# RetMask

./: LICENSE  README.md  main.py  pyproject.toml
1_Retrieval_Head_Deactivation/: mask_retrieval_head.py  needle_in_haystack_with_mask.py  retrieval_head_detection.py
1_Retrieval_Head_Deactivation/contexts/Llama-3.1-8B-Instruct/: Llama-3_1-8B-Instruct_len_1053_depth_10000_context.txt  Llama-3_1-8B-Instruct_len_1053_depth_8900_context.txt  Llama-3_1-8B-Instruct_len_1316_depth_10000_context.txt  Llama-3_1-8B-Instruct_len_1316_depth_2200_context.txt  Llama-3_1-8B-Instruct_len_1579_depth_10000_context.txt  Llama-3_1-8B-Instruct_len_1579_depth_7800_context.txt  Llama-3_1-8B-Instruct_len_1842_depth_10000_context.txt  Llama-3_1-8B-Instruct_len_1842_depth_4400_context.txt  Llama-3_1-8B-Instruct_len_2105_depth_10000_context.txt  Llama-3_1-8B-Instruct_len_2105_depth_1100_context.txt  Llama-3_1-8B-Instruct_len_2368_depth_10000_context.txt  (+27 more)
1_Retrieval_Head_Deactivation/head_score/: Llama-3.1-8B-Instruct.json  Olmo-3-7B-Think.json  Qwen3-8B.json
2_Contrastive_Response_Generation/: exec_synthesize_assistant_response_using_llama.sh  exec_synthesize_assistant_response_using_olmo.sh  exec_synthesize_assistant_response_using_qwen.sh  set_up_vllm_api_llama_and_generate.sh  set_up_vllm_api_olmo_and_generate.sh  set_up_vllm_api_qwen_and_generate.sh  synthesize_assistant_response.py
3_Direct_Preference_Optimization/: build_dpo_data.py  run_dpo_llama.sh  run_dpo_olmo.sh  run_dpo_olmo_inst.sh  run_dpo_qwen.sh
3_Direct_Preference_Optimization/dpo/: dpo_llm.py  dpo_llm_diagnose.py
(+81 files in other folders)
