[project]
name = "retmask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.2"
dependencies = [
    "torch==2.9.0",
    "vllm>=0.9.0",
    "transformers",
    "trl==0.24.0",
    "flash-attn",
    "rouge-score>=0.1.2",
    "matplotlib>=3.10.8",
    "datasets==4.3.0",
    "deepspeed>=0.18.9",
    "wandb>=0.26.0",
    "hf-transfer>=0.1.9",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch", "setuptools", "wheel"]

[tool.uv.sources]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
